[gd_scene load_steps=2 format=3 uid="uid://e0bn3ydsv43i"]

[ext_resource type="Script" uid="uid://dpgn31k4vu82i" path="res://arena.gd" id="1"]

[node name="Arena" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 600.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 950.0
offset_bottom = 550.0
color = Color(0.2, 0.1, 0.3, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 930.0
offset_bottom = 530.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 840.0
offset_bottom = 440.0
theme_override_constants/separation = 10

[node name="PlayerStats" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Joueur : HP 10, Attaque 3"
horizontal_alignment = 1

[node name="OpponentStats" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Adversaire : HP 10, Attaque 3"
horizontal_alignment = 1

[node name="ChallengeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "DÃ©fier un joueur"

[node name="CombatLog" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "[center]En attente de combat...[/center]"
autowrap_mode = 2
